# MedRayCaster

./: Cargo.toml  LICENSE  README.md
assets/shaders/: aip_shader.glsl  cookbook_shader.glsl  mip_shader.glsl  raycaster.glsl  vertex_shader.glsl
examples/assets/: FullHead.raw  sinus.mhd  sinus.raw
shaders/: aip_shader.glsl  cookbook_shader.glsl  fragment_shader.glsl  mip_shader.glsl  raycaster.glsl  vertex_shader.glsl
src/: build.rs  lib.rs  main.rs  renderer.rs  shader.rs  ui.rs  uniform.rs  volume.rs
web/: README.md  package-lock.json
