[package]
name = "med_ray_caster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bytemuck = "1.15.0"
byteorder = "1.5.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dicom = "0.8.0"
dicom-object = "0.8.0"
dicom-pixeldata = { version = "0.8.0", features = ["ndarray"] }
eframe = { version = "0.27.1", features = ["glow"] }
egui_glow = "0.26.0"
egui_plot = "0.26.0"
glow = "0.13.1"
log = "0.4.22"
nalgebra = "0.32.4"
nalgebra-glm = "0.18.0"
rayon = "1.10.0"
three-d = { version = "0.17.0", features = ["egui-gui"] }
three-d-asset = { version = "0.7.0", features = ["vol"] }
wasm-bindgen = "0.2.92"
winit = "0.29.15"

[lib]
crate-type = ["cdylib", "rlib"]
